<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Extanded">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scroll">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/extitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/Black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                style="@style/text_title_Style"
                android:text="@string/date" />

            <TextView
                android:id="@+id/exdate"
                style="@style/textStyle" />

            <TextView
                style="@style/text_title_Style"
                android:text="@string/pillar_name" />

            <TextView
                android:id="@+id/pillar_name"
                style="@style/textStyle" />

            <TextView
                style="@style/text_title_Style"
                android:text="@string/section_name" />

            <TextView
                android:id="@+id/sectionname"
                style="@style/textStyle" />
        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_below="@id/scroll"
        android:id="@+id/authors_title"
        style="@style/text_title_Style"
        android:text="@string/authors"/>
    <ListView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/authors_title"/>
    <Button
        android:id="@+id/btn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/oval_btn"
        android:text="@string/visit"
        android:textColor="@color/Black"
        android:textSize="20sp" />
</RelativeLayout>